# physical-ids-telemetry

./: README.md  debug-sleep-02.cap  west.yml
.github/workflows/: render-diagrams.yml
artifacts/bootloader/: README.md
artifacts/pinouts/: GY-521-MPU6050-pinout.md
docs/analysis/: threat_model.md
docs/architecture/: component.puml  overview.puml  sequence.puml  state.puml
docs/architecture/adr/: ADR-001-nrf52840-selection.md  ADR-002-ble-vs-alternatives.md  ADR-003-mqtt-vs-alternatives.md  ADR-004-zephyr-vs-alternatives.md  ADR-006-persistent-key-storage.md
docs/dev/: context.md  quickref.md
docs/logs/: debug-crypto-012232.cap.dupekey.pre-fix  debug-crypto-013448.cap  debug-crypto-211844.cap  debug-crypto-212354.cap  debug-crypto-212947.cap  debug-crypto-213346.cap  debug-crypto-214137.cap  debug-crypto-signing-014917.cap  debug-crypto-signing-074437.cap  debug-fsm-sensor-005228.cap  debug-fsm-sensor-011524.cap  debug-fsm-sensor-193258.cap  debug-fsm-sensor-193628.cap  debug-fsm-sensor-195817.cap  debug-fsm-sensor-202642.cap  debug-fsm-sensor-215756.cap.feat  debug-fsm-sensor-222545.cap  debug-fsm-sensor-225211.cap  debug-fsm-sensor-234830.cap  debug-fsm-sleep-000045.cap  debug-fsm-sleep-194856.cap  debug-fsm-sleep-221029.cap  debug-fsm-sleep-222543.cap  debug-fsm-sleep-222834.cap  debug-fsm-sleep-222858.cap  debug-fsm-sleep-231517.cap
docs/resources/: references.md
docs/verification/: fsm-pipeline.md  i2c.md  setup.md  signal-integrity.md
firmware/: CMakeLists.txt  Kconfig  prj.conf
firmware/boards/: nrf52840_mdk_usb_dongle.overlay
firmware/src/: crypto.c  crypto.h  events.h  fsm.c  fsm.h  main.c
gateway/: .gitignore  Cargo.toml
gateway/crates/crypto-test/: Cargo.toml
gateway/crates/crypto-test/src/: main.rs
gateway/crates/gateway/: Cargo.toml
gateway/crates/gateway/src/: main.rs
gateway/crates/lima-types/: Cargo.toml
gateway/src/: main.rs
