[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
lima-types = { path = "../lima-types" }
btleplug   = { workspace = true }
tokio      = { workspace = true }
ratatui    = { workspace = true }
crossterm  = { workspace = true }
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }